# graph-fraud-detector

./: .dockerignore  .gitattributes  .gitignore  .renderignore  Dockerfile  Dockerfile.api  PRD.md  README.md  pyproject.toml  render.yaml  requirements.txt
.streamlit/: config.toml
data/processed/: classes.parquet  edgelist.parquet
scripts/: build_fraud_index.py  precompute_api_cache.py  preprocess_data.py  test_agent.py  test_env.py  validate_data.py
src/agent/: fraud_agent.py  rag_agent.py
src/analytics/: auto_discovery.py  contagion.py  loss_forecasting.py  model_explainability.py  regulatory_capital.py  risk_adjusted_metrics.py  risk_analysis.py  stress_testing.py  temporal_analysis.py
src/api/: app.py
src/data/: loader.py
src/models/: advanced_gnn.py  gnn_model.py  hyperparameter_optimization.py
src/ui/: dashboard.py
