[tool.poetry]
name = "graph-fraud-detector"
version = "0.1.0"
description = "Graph Neural Network for Fraud Detection with Quantitative Risk Analysis"
authors = ["Sabrina"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^3.0.3"
numpy = "^2.5.0"
matplotlib = "^3.11.0"
seaborn = "^0.13.2"
scikit-learn = "^1.9.0"
networkx = "^3.6.1"
torch = "^2.12.1"
torch-geometric = "^2.8.0"
streamlit = "^1.58.0"
plotly = "^6.8.0"
python-dotenv = "^1.2.2"
pyyaml = "^6.0.3"
optuna = "^4.9.0"
lightgbm = "^4.6.0"
pyvis = "^0.3.2"
streamlit-folium = "^0.27.2"
pytest = "^9.1.1"
tiktoken = "^0.13.0"
langchain = "^1.3.11"
langchain-openai = "^1.3.3"
langgraph = "^1.2.6"
folium = "^0.20.0"
streamlit-option-menu = "^0.4.0"
streamlit-extras = "^1.6.0"
fastapi = "^0.115.0"          
uvicorn = "^0.30.0"           
python-multipart = "^0.0.9"  

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
ruff = "^0.15.19"
mypy = "^2.1.0"
pre-commit = "^4.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"